--- a/Resumen/Latex/main.tex
+++ b/Resumen/Latex/main.tex
@@ -1,33 +1,3 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Academic Title Page
-% LaTeX Template
-% Version 2.0 (17/7/17)
-%
-% This template was downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% WikiBooks (LaTeX - Title Creation) with modifications by:
-% Vel (vel@latextemplates.com)
-%
-% License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-% 
-% Instructions for using this template:
-% This title page is capable of being compiled as is. This is not useful for 
-% including it in another document. To do this, you have two options: 
-%
-% 1) Copy/paste everything between \begin{document} and \end{document} 
-% starting at \begin{titlepage} and paste this into another LaTeX file where you 
-% want your title page.
-% OR
-% 2) Remove everything outside the \begin{titlepage} and \end{titlepage}, rename
-% this file and move it to the same directory as the LaTeX file you wish to add it to. 
-% Then add \input{./<new filename>.tex} to your LaTeX file where you want your
-% title page.
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
 %----------------------------------------------------------------------------------------
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
@@ -37,10 +7,9 @@
 \usepackage{geometry}
 \usepackage{graphicx}
 \usepackage{url}
-\usepackage[utf8]{inputenc} % Required for inputting international characters
-\usepackage[T1]{fontenc} % Output font encoding for international characters
-
-\usepackage{mathpazo} % Palatino font
+\usepackage[utf8]{inputenc}
+\usepackage[T1]{fontenc}
+\usepackage{mathpazo} 
 
 \begin{document}
 \setcounter{secnumdepth}{5}
@@ -48,20 +17,20 @@
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
 
-\begin{titlepage} % Suppresses displaying the page number on the title page and the subsequent page counts as page 1
-	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for horizontal lines, change thickness here
+\begin{titlepage} 
+	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
 	
-	\center % Centre everything on the page
+	\center
 	
 	%------------------------------------------------
 	%	Headings
 	%------------------------------------------------
 	
-	\textsc{\LARGE Universidad de Buenos Aires}\\[1.5cm] % Main heading such as the name of your university/college
+	\textsc{\LARGE Universidad de Buenos Aires}\\[1.5cm]
 	
-	\textsc{\Large Facultad de Ingeniería}\\[0.5cm] % Major heading such as course name
+	\textsc{\Large Facultad de Ingeniería}\\[0.5cm]
 	
-	\textsc{\large Resumen}\\[0.5cm] % Minor heading such as course title
+	\textsc{\large Resumen}\\[0.5cm]
 	
 	%------------------------------------------------
 	%	Title
@@ -69,7 +38,7 @@
 	
 	\HRule\\[0.4cm]
 	
-	{\huge\bfseries Organización del Computador \newline 75.03 \& 95.57}\\[0.4cm] % Title of your document
+	{\huge\bfseries Organización del Computador \newline 75.03 \& 95.57}\\[0.4cm] 
 	
 	\HRule\\[1.5cm]
 	
@@ -101,9 +70,9 @@
 	%	Date
 	%------------------------------------------------
 	
-	\vfill\vfill\vfill % Position the date 3/4 down the remaining page
+	\vfill\vfill\vfill 
 	
-	{\large\today} % Date, change the \today to a set date if you want to be precise
+	{\large\today} 
 	
 	%------------------------------------------------
 	%	Logo
@@ -136,6 +105,7 @@
 
 \input{U4/part1.tex}
 \input{U4/part2.tex}
+\input{U4/part3.tex}
 
 \input{U5/part1.tex}
 \input{U5/part2.tex}
@@ -148,7 +118,5 @@
 \input{U6/part3.tex}
 \input{U6/part4.tex}
 
-
-%\input{U6/main.tex}
 
 \end{document}
